--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <h2>Other:-</h2>
         <ul>
         <li><a href="./public/my-hobbies.html">My Hobbies</a></li>
-        <li><a href="./public/personal-details.html">Contect Me</a></li>
+        <li><a href="./public/contactDetails.html">Contect Me</a></li>
         </ul>
     </li>
     </body>
